--- a/build.gradle
+++ b/build.gradle
@@ -1,80 +1,95 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            name = "forge"
-            url = "https://maven.minecraftforge.net"
-        }
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-    }
+plugins {
+    id 'net.minecraftforge.gradle' version '5.+'
+    id 'wtf.gofancy.fancygradle' version '1.+'
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "${mc_version}-${proj_version}"
 group = "me.towdium.hecharacters"
 archivesBaseName = "hecharacters"
 
-//noinspection GroovyAssignabilityCheck
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    version = "1.12.2-14.23.5.2838"
-    runDir = "run"
-    mappings = "stable_nodoc_39"
+    mappings channel: 'stable', version: '39-1.12'
+    runs {
+        client {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
 
-    replace '@VERSION@', project.version
+            mods {
+                hecharacters {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                hecharacters {
+                    source sourceSets.main
+                }
+            }
+        }
+    }
+}
+
+fancyGradle {
+    patches {
+        resources
+        coremods
+        codeChickenLib
+        asm
+        mergetool
+    }
 }
 
 configurations {
     shade
-    compile.extendsFrom shade
+    implementation.extendsFrom shade
 }
-
-dependencies {
-    deobfCompile 'curse.maven:had-enough-items-557549:4109510'
-    shade files("libs/PinIn-1.6.0-all.jar")
-
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
-}
-
 
 repositories {
     mavenCentral()
     maven { url = "https://dvs1.progwml6.com/files/maven" }
     maven { url = "modmaven.k-4u.nl" }
-    maven { url "https://cursemaven.com" }
-    maven { url 'https://jitpack.io' }
+    maven { url = 'https://jitpack.io' }
+    maven { url = "https://cursemaven.com" }
+}
+
+dependencies {
+    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
+    implementation fg.deobf('curse.maven:had-enough-items-557549:4109510')
+    implementation fg.deobf('curse.maven:just-enough-characters-250702:4402463')
+    shade files("libs/PinIn-1.6.0-all.jar")
 }
 
 processResources {
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
+    inputs.property "version", version
+    inputs.property "mcversion", project.mc_version
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-        expand 'version': project.version, 'mcversion': project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.mc_version
     }
 
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
 }
 
 jar {
     manifest {
         attributes 'FMLCorePlugin': 'me.towdium.hecharacters.core.HechCore'
     }
-    configurations.shade.each { dep ->
-        from(project.zipTree(dep)) {
-            include 'me/towdium/pinin/**'
-        }
-    }
+
+    from(provider { configurations.shade.collect { it.isDirectory() ? it : zipTree(it) } })
 }
